css/styles.css
* {
  box-sizing: border-box;
  padding: 0;
  right: 0;
}

body {
  overflow: hidden;
  font-family: "Dancing Script", cursive;
}
/* common */

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
}

.btn {
  width: 150px;
  height: 50px;
  border-radius: 999px;
  outline: none;
  border: none;
  align-items: center;
  cursor: pointer;
  user-select: none;
  background: #ccc;
  transition: opacity 0.3s;
}

.banner {
  text-align: center;
}

.title {
  font-size: 50px;
}

.btn:hover {
  opacity: 0.6;
}

.play-icon {
  width: 30px;
  height: 30px;
}

.load-wrapper {
  /* right: -90px; */
  right: -100%;
  transform: translateX(0);
  animation: load 5s 1 linear;
}

.load-wrapper,
.load-icon,
.heart {
  position: absolute;
}

.load-icon {
  width: 80px;
  height: 80px;
}

@keyframes load {
  0% {
    right: -90px;
  }
  100% {
    right: 100%;
  }
}

.heart {
  top: 50px;
  width: 20px;
  height: 20px;
  animation: heart 2s infinite linear;
}

.hear-1 {
  left: 0;
}
.hear-2 {
  left: 30px;
  animation-delay: 0.3s;
}
.hear-3 {
  left: 60px;
  animation-delay: 0.6s;
}
.hear-4 {
  left: 90px;
  animation-delay: 0.9s;
}
.hear-5 {
  left: 120px;
  animation-delay: 1.2s;
}
.hear-6 {
  left: 150px;
  animation-delay: 1.5s;
}

@keyframes heart {
  0% {
    scale: 1;
    top: 0;
  }
  50% {
    scale: 1.1;
    top: 50px;
  }
  100% {
    scale: 1.2;
    top: 0;
  }
}

.task,
.date {
  font-size: 22px;
}

.date {
  padding: 5px;
  border-radius: 6px;
  outline: none;
  font-family: inherit;
}

canvas {
  position: absolute;
  z-index: 5;
}

